--- a/config/config.ini
+++ b/config/config.ini
@@ -1,7 +1,7 @@
 [window]
 title=Genetic Algorithm
 width=400
-height=700
+height=800
 
 [color]
 primary=#0a0d10
@@ -14,6 +14,7 @@ end range=
 population amount=
 number of bits=
 epochs amount=
+precision amount=
 best and tournament chromosome amount=
 elite strategy amount=
 cross probability=
@@ -34,3 +35,8 @@ chosen=one point
 [mutation]
 options=one point,two points
 chosen=one point
+
+[buttons]
+calculate=
+plot_graphs=
+
