Add new GUI elements

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,42 +1,43 @@
 [window]
 title=Genetic Algorithm
 width=400
-height=800
+height=825
+
+[result_window]
+title=Result
+width=400
+height=200
 
 [color]
 primary=#0a0d10
 secondary=#162129
+tertiary=#051018
 text=#ffffff
 
 [entries]
-start range=
-end range=
-population amount=
-number of bits=
-epochs amount=
-precision amount=
-best and tournament chromosome amount=
-elite strategy amount=
-cross probability=
-mutation probability=
-inversion probability=
+start range=-511
+end range=511
+population amount=100
+number of bits=25
+epochs amount=100
+precision amount=0.1
+best and tournament chromosome amount=20
+elite strategy amount=20
+cross probability=20
+mutation probability=20
+inversion probability=20
 
-[options]
-options=best,cross,mutation
-
-[best]
+[options.best]
 options=best,roulette,tournament
 chosen=best
 
-[cross]
+[options.cross]
 options=one point,two points,three points,homo
 chosen=one point
 
-[mutation]
+[options.mutation]
 options=one point,two points
 chosen=one point
 
-[buttons]
-calculate=
-plot_graphs=
-
+[checkboxes]
+max=True
