--- a/config/config.ini
+++ b/config/config.ini
@@ -32,7 +32,7 @@ options=best,roulette,tournament
 chosen=best
 
 [options.cross]
-options=one point,two points,three points,homo
+options=one point,two points,three points,uniform
 chosen=one point
 
 [options.mutation]
