Export/graphing functionality

--- a/config/config.ini
+++ b/config/config.ini
@@ -36,7 +36,7 @@ options=one point,two points,three points,uniform
 chosen=one point
 
 [options.mutation]
-options=one point,two points
+options=one point,two points, edge
 chosen=one point
 
 [checkboxes]
