--- a/config/config.ini
+++ b/config/config.ini
@@ -22,6 +22,7 @@ number of bits=25
 epochs amount=100
 precision amount=0.1
 best and tournament chromosome amount=20
+tournament size=3
 elite strategy amount=20
 cross probability=20
 mutation probability=20
