--- a/config/config.ini
+++ b/config/config.ini
@@ -23,7 +23,7 @@ epochs amount=100
 precision amount=0.1
 best and tournament chromosome amount=20
 tournament size=3
-elite strategy amount=20
+elite strategy percent=5
 cross probability=20
 mutation probability=20
 inversion probability=20
@@ -41,4 +41,5 @@ options=one point,two points, edge
 chosen=one point
 
 [checkboxes]
-max=True
+max=0
+real=0
