--- a/config/config.ini
+++ b/config/config.ini
@@ -1,12 +1,12 @@
 [window]
 title=Genetic Algorithm
 width=400
-height=825
+height=900
 
 [result_window]
 title=Result
 width=400
-height=200
+height=300
 
 [color]
 primary=#0a0d10
@@ -15,8 +15,8 @@ tertiary=#051018
 text=#ffffff
 
 [entries]
-start range=-511
-end range=511
+start range=-512
+end range=512
 population amount=100
 number of bits=25
 epochs amount=100
@@ -24,6 +24,7 @@ precision amount=0.1
 best and tournament chromosome amount=20
 tournament size=3
 elite strategy percent=5
+variable number=2
 cross probability=20
 mutation probability=20
 inversion probability=20
@@ -41,5 +42,5 @@ options=one point,two points, edge
 chosen=one point
 
 [checkboxes]
-max=0
-real=0
+max="0"
+real="0"
