Gaussian and uniform mutation

--- a/config/config.ini
+++ b/config/config.ini
@@ -38,7 +38,7 @@ options=one point,two points,three points,uniform,arithmetic
 chosen=one point
 
 [options.mutation]
-options=one point,two points, edge
+options=one point,two points, edge, uniform, gaussian
 chosen=one point
 
 [checkboxes]
