--- a/config/config.ini
+++ b/config/config.ini
@@ -34,7 +34,7 @@ options=best,roulette,tournament
 chosen=best
 
 [options.cross]
-options=one point,two points,three points,uniform,arithmetic
+options=one point,two points,three points,uniform,arithmetic,linear
 chosen=one point
 
 [options.mutation]
